# RuoYi-Rust

./: .env  .gitignore  Cargo.toml  LICENSE  README-auth.md  README.md  build.rs
config/: database.sql  development.toml  example.toml  log4rs.yaml
ruoyi-admin/: Cargo.toml
ruoyi-admin/src/: app.rs  main.rs
ruoyi-cms/: Cargo.toml
ruoyi-cms/config/: database.sql
ruoyi-cms/src/: lib.rs
ruoyi-common/: Cargo.toml
ruoyi-common/src/: constants.rs  entity.rs  error.rs  lib.rs  vo.rs
ruoyi-common/src/enums/: mod.rs
ruoyi-common/src/utils/: http.rs  ip.rs  jwt.rs  mod.rs  password.rs  string.rs  time.rs  tree.rs
ruoyi-framework/: Cargo.toml
ruoyi-framework/src/: lib.rs
ruoyi-framework/src/cache/: README.md  error.rs  global_cache.rs  local_cache.rs  mod.rs  multi_level_cache.rs  redis_cache.rs
ruoyi-framework/src/cache/examples/: cache_admin.rs  global_cache_example.rs  hash_perf_test.rs  local_cache_example.rs  mod.rs
ruoyi-framework/src/cache/tests/: global_cache_tests.rs
ruoyi-framework/src/config/: app.rs  cache.rs  db.rs  jwt.rs  mod.rs  server.rs
ruoyi-framework/src/db/: mod.rs  repository.rs  transaction.rs
ruoyi-framework/src/logger/: database_appender.rs  mod.rs
ruoyi-framework/src/logger/entity/: login_info.rs  mod.rs  oper_log.rs
ruoyi-framework/src/rms/: channel.rs  consumer.rs  converter.rs  mod.rs  producer.rs  readme.md
ruoyi-framework/src/rms/examples/: README.md  mod.rs  redis_example.rs  redis_impl.rs
ruoyi-framework/src/rms/tests/: mod.rs  redis_tests.rs
ruoyi-framework/src/web/: controller.rs  filter.rs  mod.rs  service.rs  tls.rs
ruoyi-framework/src/web/middleware/: auth.rs  cors.rs  error.rs  logger.rs  mod.rs  performance.rs  response.rs
ruoyi-generator/: Cargo.toml
ruoyi-generator/src/: config.rs  lib.rs
ruoyi-generator/src/common/: constants.rs  utils.rs
ruoyi-generator/src/controller/: gen_controller.rs  mod.rs
ruoyi-generator/src/entity/: gen_table.rs  gen_table_column.rs  mod.rs  prelude.rs
ruoyi-generator/src/repository/: gen_table_column_repository.rs  gen_table_repository.rs  mod.rs
ruoyi-generator/src/service/: gen_table_column_service.rs  gen_table_service.rs  mod.rs
ruoyi-macros/: Cargo.toml
ruoyi-macros/src/: lib.rs
ruoyi-system/: Cargo.toml
ruoyi-system/src/: lib.rs
ruoyi-system/src/controller/: config_controller.rs  dept_controller.rs  dict_data_controller.rs  dict_type_controller.rs  login_controller.rs  login_info_controller.rs  menu_controller.rs  mod.rs  notice_controller.rs  oper_log_controller.rs  post_controller.rs  role_controller.rs  user_controller.rs
ruoyi-system/src/controller/monitor/: cache_controller.rs  mod.rs  server_controller.rs  user_online_controller.rs
ruoyi-system/src/entity/: config.rs  dept.rs  dict_data.rs  dict_type.rs  menu.rs  mod.rs  notice.rs  post.rs  prelude.rs  role.rs  role_dept.rs  role_menu.rs  user.rs  user_post.rs  user_role.rs
ruoyi-system/src/entity/vo/: dept.rs  menu.rs  meta.rs  mod.rs  router.rs  user.rs
ruoyi-system/src/repository/: config_repository.rs  dept_repository.rs  dict_data_repository.rs  dict_type_repository.rs  login_info_repository.rs  menu_repository.rs  mod.rs  notice_repository.rs  oper_log_repository.rs  post_repository.rs  role_repository.rs  user_repository.rs
ruoyi-system/src/service/: config_service.rs  dept_service.rs  dict_data_service.rs  dict_type_service.rs  login_info_service.rs  menu_service.rs  mod.rs  notice_service.rs  oper_log_service.rs  post_service.rs  role_service.rs  user_service.rs
ruoyi-ui/: package.json
ruoyi-ui/src/views/: login.vue
ruoyi-ui/src/views/monitor/server/: index.vue
src/: lib.rs
