[package]
name = "ruoyi-cms"
version = "0.1.0"
edition = "2021"

[dependencies]
# 项目内部依赖
ruoyi-common = { path = "../ruoyi-common" }
ruoyi-framework = { path = "../ruoyi-framework" }
ruoyi-macros = { path = "../ruoyi-macros" }

# 数据库
sea-orm.workspace = true

# Web 框架
actix-web.workspace = true

# 序列化与反序列化
serde.workspace = true
serde_json.workspace = true